--- a/css/main.css
+++ b/css/main.css
@@ -1,42 +1,49 @@
 
-.headimg{
+.headimg {
   max-width: 80px;
   height:auto;
-}
-.headline{
+ }
+
+
+.headline {
   padding-top: 10px;
 }
-h1{
+
+
+h1 {
   color: #2d3c49;
 }
-h2{
+
+
+p {
   color: #7d97ad;
 }
-hr{
+
+
+hr {
   border-bottom:4px solid #7d97ad;
 }
 
-img{
+img {
   width: 100%;
 }
-.myfigcaption{
+
+
+.myfigcaption {
   text-align: center;
 }
-.addpad{
+
+
+.addpad {
   padding-bottom: 20px;
   padding-top: 10px;
 }
-.midimg{
+
+
+.midimg {
   max-height:720px;
 }
 
-.sameheight{
+.sameheight {
   height:70%
-}
-
-.line{
-  width: 100%;
-  height: 47px;
-  border-bottom: 1px solid black;
-  position: absolute;
 }
